Fix font size being too big on mobile & increase search box size.

--- a/src/app/controllers/signup/signup.component.scss
+++ b/src/app/controllers/signup/signup.component.scss
@@ -19,21 +19,10 @@
     margin: 0 !important;
   }
 }
-/*
-#signup-footer{
-  height: 45px;
-  position: fixed;
-  width: 100%;
-  z-index: 2;
-  right: 0;
-  bottom: 0;
-  margin: 0 0 0 70px;
-  background-color: #292727;
-}
-*/
+
 .search {
   margin-left: 5px;
-  width: 40%;
+  width: 70%;
   position: relative;
   margin-top: 3px;
 
