--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,9 +72,7 @@ html, body {
         border-radius: 8px;
         padding: 20px;
         margin-bottom: 8px;
-        font-size:calc(80% - 0.1vh);
-
-
+        font-size: 1.5vh;
 
         .options{
           float: right;
